--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-rev": "^6.0.1",
     "gulp-rev-collector": "^1.0.2",
     "gulp-uglify": "^1.4.2",
+    "gulp-webserver": "^0.9.1",
     "run-sequence": "^1.1.4"
   }
 }
