--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "gulpfile.js",
   "dependencies": {
     "bower": "^1.3.12",
-    "del": "^1.1.1",
     "gulp-autoprefixer": "^2.1.0",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.1",
@@ -31,17 +30,18 @@
   },
   "homepage": "https://github.com/codeofsumit/boilerplate",
   "devDependencies": {
-    "del": "^1.2.1",
     "glob": "^5.0.15",
     "gulp-changed": "^1.3.0",
+    "gulp-clean": "^0.3.1",
     "gulp-csslint": "^0.2.0",
     "gulp-if": "^2.0.0",
     "gulp-jshint": "^1.12.0",
     "gulp-minify-html": "^1.0.4",
+    "gulp-rename": "^1.2.2",
     "gulp-rev": "^6.0.1",
     "gulp-rev-collector": "^1.0.2",
+    "gulp-sync": "^0.1.4",
     "gulp-uglify": "^1.4.2",
-    "gulp-webserver": "^0.9.1",
     "run-sequence": "^1.1.4"
   }
 }
