--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "gulp-if": "^2.0.0",
     "gulp-jshint": "^1.12.0",
     "gulp-minify-html": "^1.0.4",
+    "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^6.0.1",
     "gulp-rev-collector": "^1.0.2",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-sync": "^0.1.4",
     "gulp-uglify": "^1.4.2",
     "run-sequence": "^1.1.4"
